Restore weighted BTC fee receiver routing
Reintroduce the filter btc_fee_receiver_addresses field at its original protobuf field number and include it in canonical filter encoding.

Route configured weighted receivers through BtcFeeReceiverService, leaving the remaining probability to Burning Man receiver selection, and keep legacy plain-address filter behavior as uniform selection.

Expose the filter receivers through FilterPolicyService, include parsed receivers in mempool fee address validation, and add admin filter UI validation plus focused tests.

Add BTC fee receiver routing spec

Move the filter-controlled Burning Man BTC fee receiver concept into tracked developer docs and link it from the Burning Man documentation.