@@ -21,28 +21,45 @@ import bisq.core.dao.burningman.model.BurningManCandidate;
 import bisq.core.dao.state.DaoStateListener;
 import bisq.core.dao.state.DaoStateService;
 import bisq.core.dao.state.model.blockchain.Block;
+import bisq.core.filter.FilterPolicyService;
 
 import javax.inject.Inject;
 import javax.inject.Singleton;
 
+import com.google.common.base.Splitter;
 import com.google.common.annotations.VisibleForTesting;
 
+import java.math.BigDecimal;
+import java.math.RoundingMode;
+
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 @Singleton
 public class BtcFeeReceiverService implements DaoStateListener {
+    @VisibleForTesting
+    static final int RECEIVER_SELECTION_CEILING = 10000;
+
+    private static final BigDecimal ONE = BigDecimal.ONE;
+    private static final BigDecimal RECEIVER_SELECTION_CEILING_AS_DECIMAL = BigDecimal.valueOf(RECEIVER_SELECTION_CEILING);
+
     private final BurningManService burningManService;
+    private final FilterPolicyService filterPolicyService;
 
     private int currentChainHeight;
 
     @Inject
-    public BtcFeeReceiverService(DaoStateService daoStateService, BurningManService burningManService) {
+    public BtcFeeReceiverService(DaoStateService daoStateService,
+                                 BurningManService burningManService,
+                                 FilterPolicyService filterPolicyService) {
         this.burningManService = burningManService;
+        this.filterPolicyService = filterPolicyService;
 
         daoStateService.addDaoStateListener(this);
         daoStateService.getLastBlock().ifPresent(this::applyBlock);
@@ -68,10 +85,52 @@ public class BtcFeeReceiverService implements DaoStateListener {
     ///////////////////////////////////////////////////////////////////////////////////////////
 
     public String getAddress() {
+        FeeReceiverConfig feeReceiverConfig = getFeeReceiverConfig();
+
+        List<String> receiverAddresses = new ArrayList<>(feeReceiverConfig.getReceiverAddresses());
+        List<Long> amountList = new ArrayList<>(feeReceiverConfig.getReceiverWeights());
+        addBurningManFeeReceivers(receiverAddresses, amountList, feeReceiverConfig.getBurningManReceiverWeight());
+
+        int winnerIndex = getRandomIndex(amountList, new Random());
+        if (winnerIndex == -1) {
+            return burningManService.getLegacyBurningManAddress(currentChainHeight);
+        }
+        return receiverAddresses.get(winnerIndex);
+    }
+
+    public static void validateBtcFeeReceiverAddresses(List<String> btcFeeReceiverAddresses) {
+        parseBtcFeeReceiverAddresses(btcFeeReceiverAddresses);
+    }
+
+    public static List<String> getConfiguredReceiverAddresses(List<String> btcFeeReceiverAddresses) {
+        try {
+            return parseBtcFeeReceiverAddresses(btcFeeReceiverAddresses).getReceiverAddresses();
+        } catch (IllegalArgumentException exception) {
+            log.warn("Ignoring invalid BTC fee receiver filter configuration: {}", exception.getMessage());
+            return List.of();
+        }
+    }
+
+    private FeeReceiverConfig getFeeReceiverConfig() {
+        try {
+            return parseBtcFeeReceiverAddresses(filterPolicyService.getBtcFeeReceiverAddresses());
+        } catch (IllegalArgumentException exception) {
+            log.warn("Ignoring invalid BTC fee receiver filter configuration: {}", exception.getMessage());
+            return FeeReceiverConfig.forBurningManOnly();
+        }
+    }
+
+    private void addBurningManFeeReceivers(List<String> receiverAddresses, List<Long> amountList, long ceiling) {
+        if (ceiling == 0) {
+            return;
+        }
+
         List<BurningManCandidate> activeBurningManCandidates = burningManService.getActiveBurningManCandidates(currentChainHeight);
         if (activeBurningManCandidates.isEmpty()) {
             // If there are no compensation requests (e.g. at dev testing) we fall back to the default address
-            return burningManService.getLegacyBurningManAddress(currentChainHeight);
+            receiverAddresses.add(burningManService.getLegacyBurningManAddress(currentChainHeight));
+            amountList.add(ceiling);
+            return;
         }
 
         // It might be that we do not reach 100% if some entries had a cappedBurnAmountShare.
@@ -79,25 +138,115 @@ public class BtcFeeReceiverService implements DaoStateListener {
         // cappedBurnAmountShare is a % value represented as double. Smallest supported value is 0.01% -> 0.0001.
         // By multiplying it with 10000 and using Math.floor we limit the candidate to 0.01%.
         // Entries with 0 will be ignored in the selection method, so we do not need to filter them out.
-        int ceiling = 10000;
-        List<Long> amountList = activeBurningManCandidates.stream()
+        String legacyBurningManAddress = burningManService.getLegacyBurningManAddress(currentChainHeight);
+        List<Long> burningManAmountList = activeBurningManCandidates.stream()
                 .map(BurningManCandidate::getCappedBurnAmountShare)
                 .map(cappedBurnAmountShare -> (long) Math.floor(cappedBurnAmountShare * ceiling))
-                .collect(Collectors.toList());
-        long sum = amountList.stream().mapToLong(e -> e).sum();
-        // If we have not reached the 100% we fill the missing gap with the legacy BM
-        if (sum < ceiling) {
-            amountList.add(ceiling - sum);
+                .toList();
+        long sum = burningManAmountList.stream().mapToLong(e -> e).sum();
+
+        for (int i = 0; i < activeBurningManCandidates.size(); i++) {
+            receiverAddresses.add(activeBurningManCandidates.get(i).getReceiverAddress().orElse(legacyBurningManAddress));
+            amountList.add(burningManAmountList.get(i));
         }
 
-        int winnerIndex = getRandomIndex(amountList, new Random());
-        if (winnerIndex == activeBurningManCandidates.size()) {
-            // If we have filled up the missing gap to 100% with the legacy BM we would get an index out of bounds of
-            // the burningManCandidates as we added for the legacy BM an entry at the end.
-            return burningManService.getLegacyBurningManAddress(currentChainHeight);
+        // If we have not reached the 100% we fill the missing gap with the legacy BM
+        if (sum < ceiling) {
+            receiverAddresses.add(legacyBurningManAddress);
+            amountList.add(ceiling - sum);
         }
-        return activeBurningManCandidates.get(winnerIndex).getReceiverAddress()
-                .orElse(burningManService.getLegacyBurningManAddress(currentChainHeight));
+    }
+
+    @VisibleForTesting
+    static FeeReceiverConfig parseBtcFeeReceiverAddresses(List<String> btcFeeReceiverAddresses) {
+        List<String> receiverEntries = splitReceiverEntries(btcFeeReceiverAddresses);
+        if (receiverEntries.isEmpty()) {
+            return FeeReceiverConfig.forBurningManOnly();
+        }
+
+        boolean hasWeightedReceivers = receiverEntries.stream().anyMatch(entry -> entry.contains("#"));
+        boolean hasPlainReceivers = receiverEntries.stream().anyMatch(entry -> !entry.contains("#"));
+        if (hasWeightedReceivers && hasPlainReceivers) {
+            throw new IllegalArgumentException("Invalid BTC fee receiver configuration. Do not mix weighted address#fraction entries and plain address entries.");
+        }
+
+        if (hasPlainReceivers) {
+            return FeeReceiverConfig.forPlainReceivers(receiverEntries);
+        }
+
+        return parseWeightedBtcFeeReceiverAddresses(receiverEntries);
+    }
+
+    private static List<String> splitReceiverEntries(List<String> btcFeeReceiverAddresses) {
+        if (btcFeeReceiverAddresses == null) {
+            return List.of();
+        }
+        return btcFeeReceiverAddresses.stream()
+                .flatMap(BtcFeeReceiverService::splitReceiverEntry)
+                .toList();
+    }
+
+    private static Stream<String> splitReceiverEntry(String entry) {
+        if (entry == null) {
+            throw new IllegalArgumentException("Invalid BTC fee receiver configuration. Entries must not be null.");
+        }
+        return Splitter.on(';').trimResults().omitEmptyStrings().splitToStream(entry);
+    }
+
+    private static FeeReceiverConfig parseWeightedBtcFeeReceiverAddresses(List<String> receiverEntries) {
+        List<String> receiverAddresses = new ArrayList<>();
+        List<Long> receiverWeights = new ArrayList<>();
+        BigDecimal totalShare = BigDecimal.ZERO;
+        long totalWeight = 0;
+
+        for (String receiverEntry : receiverEntries) {
+            String[] receiverSpec = receiverEntry.split("#", -1);
+            if (receiverSpec.length != 2) {
+                throw new IllegalArgumentException("Invalid BTC fee receiver configuration. Expected address#fraction entries.");
+            }
+
+            String address = receiverSpec[0].trim();
+            if (address.isEmpty()) {
+                throw new IllegalArgumentException("Invalid BTC fee receiver configuration. Address must not be empty.");
+            }
+
+            BigDecimal share = parseShare(receiverSpec[1].trim());
+            long weight = share.multiply(RECEIVER_SELECTION_CEILING_AS_DECIMAL)
+                    .setScale(0, RoundingMode.FLOOR)
+                    .longValueExact();
+            if (weight == 0) {
+                throw new IllegalArgumentException("Invalid BTC fee receiver configuration. Smallest supported fraction is 0.0001.");
+            }
+
+            totalShare = totalShare.add(share);
+            if (totalShare.compareTo(ONE) > 0) {
+                throw new IllegalArgumentException("Invalid BTC fee receiver configuration. Weighted fractions must not sum to more than 1.0.");
+            }
+
+            receiverAddresses.add(address);
+            receiverWeights.add(weight);
+            totalWeight += weight;
+        }
+
+        return new FeeReceiverConfig(receiverAddresses, receiverWeights, RECEIVER_SELECTION_CEILING - totalWeight);
+    }
+
+    private static BigDecimal parseShare(String value) {
+        if (value.isEmpty()) {
+            throw new IllegalArgumentException("Invalid BTC fee receiver configuration. Fraction must not be empty.");
+        }
+
+        BigDecimal share;
+        try {
+            share = new BigDecimal(value);
+        } catch (NumberFormatException exception) {
+            throw new IllegalArgumentException("Invalid BTC fee receiver configuration. Fraction must be a decimal value.", exception);
+        }
+
+        if (share.compareTo(BigDecimal.ZERO) <= 0 || share.compareTo(ONE) > 0) {
+            throw new IllegalArgumentException("Invalid BTC fee receiver configuration. Fraction must be greater than 0 and not more than 1.0.");
+        }
+        return share;
     }
 
     @VisibleForTesting
@@ -120,5 +269,31 @@ public class BtcFeeReceiverService implements DaoStateListener {
             }
         }
         return 0;
+    }
+
+    @VisibleForTesting
+    @Getter
+    static final class FeeReceiverConfig {
+        private final List<String> receiverAddresses;
+        private final List<Long> receiverWeights;
+        private final long burningManReceiverWeight;
+
+        private FeeReceiverConfig(List<String> receiverAddresses,
+                                  List<Long> receiverWeights,
+                                  long burningManReceiverWeight) {
+            this.receiverAddresses = List.copyOf(receiverAddresses);
+            this.receiverWeights = List.copyOf(receiverWeights);
+            this.burningManReceiverWeight = burningManReceiverWeight;
+        }
+
+        private static FeeReceiverConfig forBurningManOnly() {
+            return new FeeReceiverConfig(List.of(), List.of(), RECEIVER_SELECTION_CEILING);
+        }
+
+        private static FeeReceiverConfig forPlainReceivers(List<String> receiverEntries) {
+            return new FeeReceiverConfig(receiverEntries,
+                    receiverEntries.stream().map(entry -> 1L).toList(),
+                    0);
+        }
     }
 }
